# catalog_bot

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml  entrypoint.sh  nginx.conf
src/: manage.py
src/admin_bot/: admin.py  apps.py
src/admin_bot/application/exceptions/: bot.py
src/admin_bot/application/handlers/: admin.py
src/admin_bot/application/services/: admin.py  catalog_bot.py
src/admin_bot/application/state/: start.py
src/admin_bot/db/: __init__.py
src/admin_bot/db/migrations/: 0001_initial.py
src/admin_bot/db/models/: admin.py
src/admin_bot/db/repositories/: admin.py  catalog_bot.py
src/admin_bot/main/di/: container.py
src/admin_bot/main/tg/: dispatcher.py  polling_main.py
src/admin_bot/management/commands/: create_admin_bot_su.py  set_admin_bot_webhook.py  start_admin_bot_polling.py
src/admin_bot/presentators/api/: urls.py  views.py
src/admin_bot/presentators/routers/: __init__.py  start.py
src/catalog_bot/: admin.py  apps.py
src/catalog_bot/application/handlers/: admin.py  menu.py  newsletter.py
src/catalog_bot/application/services/: welcome_message.py
src/catalog_bot/application/tasks/: __init__.py  send_periodic_newsletter.py
src/catalog_bot/domain/entities/: bot.py  catalog.py  newsletter.py  statistic.py  tap_client.py  welcome_message.py
src/catalog_bot/domain/exceptions/: bot.py  captcha.py  catalog.py  newsletter.py  tap_client.py  (+1 more)
src/catalog_bot/infrastructure/: __init__.py
src/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+117 files in other folders)
